# LanpartySeatingCredProv

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-package.yml
RdpCredProv/: CMakeLists.txt  Dll.cpp  RdpCredential.cpp  RdpCredential.h  RdpProvider.cpp  RdpProvider.h  Register.reg  common.h  helpers.cpp  helpers.h
